<?xml version="1.1" encoding="utf-8"?>
<resources>

    <string name="app_name">Eesti Keel</string>
    <string name="hello_world">(^_^)</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_about">About</string>   

    <string name="copy_right">Copyright © 2015 Charles Hua\nAll Rights Reserved.</string>
    <string name="thx">Special thanks to Chander for icon making</string>

    <string name="version_name_1">1.0 (情人节私人定制版)</string>
    <string name="version_name_2">1.1.0 (新春贺岁版)</string>
    
    <string name="version_fun_1">
        <p> • 点击输入相应字母\n</p>
        <p> • \"↑\"键切换大小写，\"←\"键退格\n</p>
        <p> • 输入完成后点击\"Koopia\"键将文本复制至剪贴板\n</p>
        <p> • 点击\"Kustutada\"键清空输入内容</p>
        </string>
 
    <string name="version_fun_2">
        <p> • 大写锁定时\"↑\"变红色，各字母相应变化\n</p>
        <p> • 对文本添加下划线，便于区分空格\n</p>
        <p> • 复制操作后提示\n</p>
        <p> • 退出程序时提示</p>
        </string>
    
</resources>
