<?xml version="1.1" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="24sp" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.1.0"
            android:textSize="15sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="版本与功能"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                  
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:background="#FFFFFF"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"                       
                        android:text="@string/version_name_1"
                        android:textSize="15sp"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version_fun_1"
                        android:textSize="15sp"
                        android:textColor="#000000" />

                </LinearLayout>
                      
                <LinearLayout
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="1dp" 
                    android:background="#FFFFFF" 
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"                       
                        android:text="@string/version_name_2"
                        android:textSize="15sp"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version_fun_2"
                        android:textSize="15sp"
                        android:textColor="#000000" />

                  </LinearLayout>
                      
              </LinearLayout>
          </ScrollView>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout4"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="bottom|center"
          android:orientation="vertical" >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/copy_right"
              android:textSize="12sp" />
          
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/thx"
              android:textSize="12sp" />

      </LinearLayout>
          
</LinearLayout>
